--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
   }
 
   .btn_dark_green_outline {
-    @apply border-gray-20 bg-green-90 px-8 py-5 text-white
+    @apply border-2 border-gray-20 bg-green-90 px-8 py-3 text-white
   }
 
   .max-container {
@@ -140,7 +140,7 @@ body {
 
   /* Feature */
   .feature-phone {
-    @apply absolute top-[13%] z-10 hidden max-w-[1500px] rotate-[15deg] md:-left-16 lg:flex 3xl:left-20;
+    @apply absolute top-[20%] z-10 hidden max-w-[1500px] rotate-[15deg] md:-left-40 lg:flex 3xl:-left-[10%];
   }
 
   /* Get App */
